# slab_allocator

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs  slab.rs
